--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1 {
         background-color: orange;
     }
 
-   @media (min-width: 600px) and (max-height: 400px) {
+   @media (min-width: 601px) and (max-height: 400px) {
     #one {
         border: 10px dashed gray;
     }
@@ -29,7 +29,7 @@ h1 {
     }
     }
 
-    @media (min-width: 900px) or (min-height: 500px) {
+    @media (min-width: 901px) or (min-height: 501px) {
         #two{
             border-top: 10px solid gray;
         }
@@ -38,7 +38,7 @@ h1 {
     @media (orientation: landscape) {
         #one, #two, #three {
             display: flex;
-            flex-direction: row;
+            /* flex-direction: row; */
         } 
     }
 
