--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ h1 {
         #one, #two, #three {
             display: flex;
             flex-direction: column;
+            justify-content: center;
+            align-items: center;
         } 
     }
 
