--- a/style.css
+++ b/style.css
@@ -51,4 +51,37 @@ h1 {
         } 
     }
 
+    @media print {
+        body {
+            text-transform: uppercase;
+        }
+        h1 {
+            color: green;
+        }
+    }
+
+    @media (max-width: 800px) {
+        body {
+            background-color: navy;
+        }
+        #two {
+            color: orange;
+        }
+    }
+
+    @media (max-width: 600px) {
+        body {
+            background-color: orange;
+        }
+        #two {
+            color: orange;
+        }
+    }
+
+    @media (min-width: 750px) and (max-width: 775px) and (min-height: 550px) and (max-height: 575px) {
+        h1 {
+            font-style: italic;
+        }
+    } 
+
    }
